# carClasificator

./: README.md  pyproject.toml  requirements.txt
car-clasificator/: README.md  pyproject.toml
car-clasificator/car_clasificator/: __init__.py  car_detector.py  plate_model_trainer.py  plate_recognision.py  train_brands.py  util.py
car-clasificator/car_clasificator/utilities/: car_brands_train.py
car-clasificator/datasets/: car_brands.py  car_brands_dataset.py
car-clasificator/utilities/: car_brands_model.py  car_brands_train.py
