[tool.poetry]
name = "car-clasificator"
version = "0.1.0"
description = ""
authors = ["KacperKwiat <s24533@pjwstk.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
pillow = "^10.4.0"
matplotlib = "^3.9.1"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
